chore: update package.json

--- a/package.json
+++ b/package.json
@@ -66,5 +66,7 @@
       "test/**/*.test.js"
     ]
   },
-  "funding": "https://github.com/sponsors/panva"
+  "funding": {
+    "url": "https://github.com/sponsors/panva"
+  }
 }
