--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
     "ava": "^2.4.0",
     "c8": "^6.0.1",
     "husky": "^3.0.9",
-    "jose": "^1.16.0",
+    "jose": "^2.0.1",
     "standard": "^14.3.1"
   },
   "peerDependencies": {
-    "jose": "^1.16.0"
+    "jose": "^1.16.0 || ^2.0.1"
   },
   "engines": {
     "node": ">=12.0.0"
